--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }} | {{ site.title }}</title>
-    <meta name="description" content="{{ page.description | default: site.description }}">
+    {% assign meta_desc = page.description | default: site.description | strip_html | strip_newlines %}
+    <meta name="description" content="{{ meta_desc | escape }}">
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="{{ site.title | escape }}">
+    <meta property="og:title" content="{{ page.title | default: site.title | escape }}">
+    <meta property="og:description" content="{{ meta_desc | escape }}">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ page.title | default: site.title | escape }}">
+    <meta name="twitter:description" content="{{ meta_desc | escape }}">
     <link rel="stylesheet" href="/assets/css/site.css">
 
     {% assign current_lang = page.lang | default: site.lang %}
